Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1, 5.3.2, 5.4.0
-
None
-
imx6 + Vivante GPU using a Jessie/Debian setup with kernel - Linux imx6armdev 3.10.31-82561-g30ad12b-dirty #4 SMP Mon Dec 8 13:43:46 EST 2014 armv7l GNU/Linux
-
e7bd18f156e508969cc536c0f0b8e3c2c3c75c47
Description
Reference QTBUG-9444
There seems to be lot of good background on the reasoning of why Qt currently performs as it does, but the current implementation requires a hack patch to be applied for all IMX6 users to get OpenGL functionality.
I patched src/platformsupport/eglconvenience/qxlibeglintegration.cpp
in VisualID QXlibEglIntegration::getCompatibleVisualId(Display *display, EGLDisplay
to return
- return (VisualID)0;
+ return (VisualID)33;
I have a slightly different setup from most people using imx6, as I bootstrapped Debian/Jessie and then built Xorg from scratch and then subsequently Qt5. Qt5 from apt-get would have been fine if it were not for this bug preventing OpenGL functionality.
I will report with Freescale and hope they take up the issue with Vivante, but I hold little hope there. A little googling and digging into yocto builds will notice that the patch is pretty common practice for imx6 users. https://lists.yoctoproject.org/pipermail/meta-freescale/2013-September/004617.html
Attachments
Issue Links
- relates to
-
QTBUG-9444 Failure to match EGLConfig and X Visual buffer depth crashes app.
-
- Closed
-