Fix EGL config - X visual matching for i.MX6

Task-number: QTBUG-44290
Change-Id: I06cbb169803aa8a06ea310651def1f3582194c8e
Reviewed-by: Jørgen Lind <jorgen.lind@theqtcompany.com>